--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,13 @@
 @import 'basic/base.css';
 @import 'basic/layout.css';
 @import 'basic/helpers.css';
+@import 'basic/mq.css';
 
 /* COMPONENTS */
 @import 'components/main-header.css';
+@import 'components/gallery.css';
 @import 'components/canvas.css';
+@import 'components/control-box.css';
 
 
 
