--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 @import 'components/gallery.css';
 @import 'components/canvas.css';
 @import 'components/control-box.css';
+@import 'components/footer.css';
 
 
 
