--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -1,5 +1,5 @@
 .main-header {
-    width: 1200px;
+    /* width: 1200px; */
     background-color: var(--clr1);
     margin: 0 0 18 0.4px;
     /* padding: 17px 50px 0 49px; */
