--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -1,19 +1,19 @@
 @font-face {
     font-family: Montserrat-Bold;
-    src: url(/fonts/Montserrat-Bold.ttf)
+    src: url(fonts/Montserrat-Bold.ttf)
 }
 
 @font-face {
     font-family: Montserrat-Medium;
-    src: url(/fonts/Montserrat-Medium);
+    src: url(fonts/Montserrat-Medium);
 }
 
 @font-face {
     font-family:Montserrat-Regular ;
-    src: url(/fonts/Montserrat-Regular.ttf);
+    src: url(fonts/Montserrat-Regular.ttf);
 }
 
 @font-face {
     font-family: Montserrat-Thin;
-    src: url(/fonts/Montserrat-Thin);
+    src: url(fonts/Montserrat-Thin);
 }
